--- a/site/package.json
+++ b/site/package.json
@@ -18,7 +18,8 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.13"
+    "sequelize": "^5.21.13",
+    "sweetalert2": "^9.15.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
